--- a/estilo.css
+++ b/estilo.css
@@ -42,7 +42,8 @@ img {
 
 }
 main {
-	 padding: 20px;
+	 
+	 padding: 100px;
 	 text-align: center;
      display: grid;
 	 grid-area: main;
@@ -59,14 +60,15 @@ footer{
 
 
 
-.skills { 
-	padding-top: 100px;
+#skills { 
+	padding-top: 400px;
+	padding-bottom: 100px;
  	display: grid;
 	grid-area: skills;
  	
  
 }
-.skills > b {
+#skills > b {
 	font-size: 50px;
     color:black;
 }
@@ -76,27 +78,29 @@ h1{
     color:black;
 }
 header {
-	background-color: black;
+	margin-top: -20px;
+	background-color: rgb(0, 0, 0);
 	border-style: solid;
 	border-width: 10px;
-	border-color: black;
+	border-color: rgb(0, 0, 0);
     display: grid;
 	grid-area: nav;
 	align-items: center;
-	
+	position: fixed;
 
 }
 header li {
-	padding: 0 0 100px 0;
+	margin: 12px;
+	padding: 0 0 75px 0;
+	
  }
+
 
 header > nav > ul > li > a{
 	
 	text-decoration:none;
 	color: antiquewhite;
 	font-size: 60px;
-	
-
 }
 
 a:hover{
