--- a/estilo.css
+++ b/estilo.css
@@ -4,9 +4,11 @@
 	list-style:none;
 	padding: 0;
     margin: 0;
+	scroll-behavior: smooth;
 }
 
 body{
+	
     background-image: url(imgs/background.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -78,6 +80,7 @@ h1{
     color:black;
 }
 header {
+	
 	margin-top: -20px;
 	background-color: rgb(0, 0, 0);
 	border-style: solid;
